--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Simple package to take a directory structure and dump it into a JSON file.",
   "main": "directoryToJson.js",
   "dependencies": {
-    "glob": "^7.1.4"
+    "glob": "^7.1.4",
+    "sharp": "^0.22.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "node test.js",
-    "build":"node build.js"
+    "build": "node build.js"
   },
   "author": "Tom Hinkle",
   "license": "ISC"
